--- a/blog.html
+++ b/blog.html
@@ -110,7 +110,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             材質：帆布、尺寸：39*44.5cm <br>
                         </p>
                         <br>
-                        <a href="https://reurl.cc/KW9am" class="btn-banner"> 商品詳情 </a>
+                        <a href="blog.html" class="btn-banner"> 商品詳情 </a>
+                        <!-- <a href="https://reurl.cc/KW9am" class="btn-banner"> 商品詳情 </a> -->
                     </div>
                 </div>
                 <div class="row-1"
@@ -134,7 +135,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         材質：帆布、尺寸：19*17cm<br>
                         </p>
                         <br>
-                        <a href="https://reurl.cc/brmv6" class="btn-banner"> 商品詳情 </a>
+                        <a href="blog.html" class="btn-banner"> 商品詳情 </a>
+                        <!-- <a href="https://reurl.cc/brmv6" class="btn-banner"> 商品詳情 </a> -->
                     </div>
                 </div>
                 <div class="row"
@@ -157,7 +159,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         保存期限：常溫未拆封下一年、原產地：台灣<br>
                         </p>
                         <br>
-                        <a href="https://reurl.cc/WmOnk" class="btn-banner"> 商品詳情 </a>
+                        <a href="blog.html" class="btn-banner"> 商品詳情 </a>
+                        <!-- <a href="https://reurl.cc/WmOnk" class="btn-banner"> 商品詳情 </a> -->
                     </div>
                 </div>
             <div class="row-1"
@@ -180,7 +183,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     保存期限：常溫未拆封下一年、原產地：台灣<br>
                     </p>
                     <br>
-                    <a href="https://reurl.cc/NMxWq" class="btn-banner"> 商品詳情 </a>
+                    <a href="blog.html" class="btn-banner"> 商品詳情 </a>
+                    <!-- <a href="https://reurl.cc/NMxWq" class="btn-banner"> 商品詳情 </a> -->
                 </div>
              </div>
         </section>
@@ -196,17 +200,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                <div class="footerv4-social banner-social text-center">
                 <ul>
                     <li>
-                        <a href="https://www.facebook.com/pg/yucirenegg/about/">
+                        <!-- <a href="https://www.facebook.com/pg/yucirenegg/about/"> -->
+                            <a href="blog.html">
                             <span class="fa fa-facebook-f icon_facebook"></span>
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/yuciren/?fbclid=IwAR2NrR9vYR8ThSXcXHV_wPwB3O6zH52cq_CvGeY156GnUNvrIF8pTyaslNs">
+                        <!-- <a href="https://www.instagram.com/yuciren/?fbclid=IwAR2NrR9vYR8ThSXcXHV_wPwB3O6zH52cq_CvGeY156GnUNvrIF8pTyaslNs"> -->
+                            <a href="blog.html">
                             <span class="fa fa-instagram icon_instagram"></span>
                         </a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/YucirenBos">
+                        <!-- <a href="https://twitter.com/YucirenBos"> -->
+                            <a href="blog.html">
                             <span class="fa fa-twitter icon_twitter"></span>
                         </a>
                     </li>
