--- a/map.html
+++ b/map.html
@@ -257,13 +257,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         </div>
         </section>
    
-
-
-
-
-
-
-
     <!-- partners -->
     <div class="w3ltdits-partners py-lg-5" id="partners">
         <div class="container py-6">
@@ -276,17 +269,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                <div class="footerv4-social banner-social text-center">
                 <ul>
                         <li>
-                                <a href="https://www.facebook.com/pg/yucirenegg/about/">
+                                <!-- <a href="https://www.facebook.com/pg/yucirenegg/about/"> -->
+                                    <a href="map.html">
                                     <span class="fa fa-facebook-f icon_facebook"></span>
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.instagram.com/yuciren/?fbclid=IwAR2NrR9vYR8ThSXcXHV_wPwB3O6zH52cq_CvGeY156GnUNvrIF8pTyaslNs">
+                                <!-- <a href="https://www.instagram.com/yuciren/?fbclid=IwAR2NrR9vYR8ThSXcXHV_wPwB3O6zH52cq_CvGeY156GnUNvrIF8pTyaslNs"> -->
+                                    <a href="map.html">
                                     <span class="fa fa-instagram icon_instagram"></span>
                                 </a>
                             </li>
                             <li>
-                                <a href="https://twitter.com/YucirenBos">
+                                <!-- <a href="https://twitter.com/YucirenBos"> -->
+                                    <a href="map.html">
                                     <span class="fa fa-twitter icon_twitter"></span>
                                 </a>
                             </li>
