--- a/contact.html
+++ b/contact.html
@@ -141,7 +141,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             </div>
                             <div class="row mt-3">
                                 <div class="col-md-12">
-                                    <button type="submit" class="btn btn-w3_pvt bg-theme text-white btn-block w-100 font-weight-bold text-uppercase bg-theme1">送出</button>
+                                    <button type="submit" class="btn btn-w3_pvt bg-theme text-white1 btn-block w-100 font-weight-bold text-uppercase bg-theme1">送出</button>
                                 </div>
                             </div>
                         </form>
@@ -161,7 +161,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         </li>
                         <li class="my-3">
                             <span class="fa fa-globe mr-2"></span>
-                            <a href="https://www.facebook.com/yucirenegg/" class="text-secondary">facebook.com</a>
+                            <!-- <a href="https://www.facebook.com/yucirenegg/" class="text-secondary">facebook.com</a> -->
+                            <a href="contact.html" class="text-secondary">facebook.com</a>
                         </li>
                         <li>
                             <span class="fa fa-phone mr-2"></span>
@@ -220,17 +221,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                <div class="footerv4-social banner-social text-center">
                 <ul>
                         <li>
-                                <a href="https://www.facebook.com/pg/yucirenegg/about/">
+                                <!-- <a href="https://www.facebook.com/pg/yucirenegg/about/"> -->
+                                    <a href="contact.html">
                                     <span class="fa fa-facebook-f icon_facebook"></span>
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.instagram.com/yuciren/?fbclid=IwAR2NrR9vYR8ThSXcXHV_wPwB3O6zH52cq_CvGeY156GnUNvrIF8pTyaslNs">
+                                <!-- <a href="https://www.instagram.com/yuciren/?fbclid=IwAR2NrR9vYR8ThSXcXHV_wPwB3O6zH52cq_CvGeY156GnUNvrIF8pTyaslNs"> -->
+                                    <a href="contact.html">
                                     <span class="fa fa-instagram icon_instagram"></span>
                                 </a>
                             </li>
                             <li>
-                                <a href="https://twitter.com/YucirenBos">
+                                <!-- <a href="https://twitter.com/YucirenBos"> -->
+                                    <a href="contact.html">
                                     <span class="fa fa-twitter icon_twitter"></span>
                                 </a>
                             </li>
