--- a/menu.html
+++ b/menu.html
@@ -145,17 +145,20 @@
                   <div class="footerv4-social banner-social text-center">
                     <ul>
                             <li>
-                                    <a href="https://www.facebook.com/pg/yucirenegg/about/">
+                                    <!-- <a href="https://www.facebook.com/pg/yucirenegg/about/"> -->
+                                        <a href="menu.html">
                                         <span class="fa fa-facebook-f icon_facebook"></span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="https://www.instagram.com/yuciren/?fbclid=IwAR2NrR9vYR8ThSXcXHV_wPwB3O6zH52cq_CvGeY156GnUNvrIF8pTyaslNs">
+                                    <!-- <a href="https://www.instagram.com/yuciren/?fbclid=IwAR2NrR9vYR8ThSXcXHV_wPwB3O6zH52cq_CvGeY156GnUNvrIF8pTyaslNs"> -->
+                                        <a href="menu.html">
                                         <span class="fa fa-instagram icon_instagram"></span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="https://twitter.com/YucirenBos">
+                                    <!-- <a href="https://twitter.com/YucirenBos"> -->
+                                        <a href="menu.html">
                                         <span class="fa fa-twitter icon_twitter"></span>
                                     </a>
                                 </li>
