--- a/news.html
+++ b/news.html
@@ -163,46 +163,40 @@
         </div>
 
 
-
-
-
-
-
-
-
-
-
-        <!-- partners -->
-        <div class="w3ltdits-partners py-lg-5" id="partners">
-            <div class="container py-6">
-                <div class="title-wthree text-center">
-                    <h2 class="w3lpvt-title">
-                        追蹤我們
-                    </h2>
-                    <span></span>
-                </div>
-                   <div class="footerv4-social banner-social text-center">
-                    <ul>
-                            <li>
-                                    <a href="https://www.facebook.com/pg/yucirenegg/about/">
-                                        <span class="fa fa-facebook-f icon_facebook"></span>
-                                    </a>
-                                </li>
+         <!-- partners -->
+         <div class="w3ltdits-partners py-lg-5" id="partners">
+                <div class="container py-6">
+                    <div class="title-wthree text-center">
+                        <h2 class="w3lpvt-title">
+                            追蹤我們
+                        </h2>
+                        <span></span>
+                    </div>
+                      <div class="footerv4-social banner-social text-center">
+                        <ul>
                                 <li>
-                                    <a href="https://www.instagram.com/yuciren/?fbclid=IwAR2NrR9vYR8ThSXcXHV_wPwB3O6zH52cq_CvGeY156GnUNvrIF8pTyaslNs">
-                                        <span class="fa fa-instagram icon_instagram"></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="https://twitter.com/YucirenBos">
-                                        <span class="fa fa-twitter icon_twitter"></span>
-                                    </a>
-                                </li>
-                    </ul>
+                                        <!-- <a href="https://www.facebook.com/pg/yucirenegg/about/"> -->
+                                            <a href="news.html">
+                                            <span class="fa fa-facebook-f icon_facebook"></span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <!-- <a href="https://www.instagram.com/yuciren/?fbclid=IwAR2NrR9vYR8ThSXcXHV_wPwB3O6zH52cq_CvGeY156GnUNvrIF8pTyaslNs"> -->
+                                            <a href="news.html">
+                                            <span class="fa fa-instagram icon_instagram"></span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <!-- <a href="https://twitter.com/YucirenBos"> -->
+                                            <a href="news.html">
+                                            <span class="fa fa-twitter icon_twitter"></span>
+                                        </a>
+                                    </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
-        <!-- //partners -->
+            <!-- //partners -->
 
         <!-- footer -->
         <footer class="footerv4-w3ls bg-theme1" id="footer">
